fix: navbar z-index

--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -4,6 +4,7 @@ header {
 
 .site-header {
   min-height: 55.95px;
+  z-index: 2;
   position: relative;
   box-shadow: 0 3px 2px -2px #4c566a;
 }
